--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Roth is Rad</title>
+    <title>Not "weed money"</title>
 
     <link rel="stylesheet" href="main.css">
 
