--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <ul class="sidenav">
 
-            <li> <a href=https://www.rjuhsd.us/site/default.aspx?PageType=3&ModuleInstanceID=8603&ViewID=5C8B25C6-C8F8-4BD5-923B-8A7C70A93DDA&RenderLoc=0&FlexDataID=16167&PageID=5107&Comments=true">
+            <li> <a href=https://www.rjuhsd.us/Page/2617">
  <img class="crest" src="https://www.rjuhsd.us/cms/lib/CA01001478/Centricity/Template/GlobalAssets/images///logos/WHS%20crest%20Logo%20transparent.png"
 alt="Woodcreek Crest" width="50px"> </a> <a class="active" href="index.html" width="1000">Home</a></li>
 
@@ -62,7 +62,7 @@ participants to respect the activity's core values, work hard and compete honest
 </a>
 
 <img id="pandering" src="instagram-new-flat.png" alt="Our Instagram!"
-<a href="https://www.facebook.com/groups/1054356761315914/"><img id="pandering2" src="facebook.png" alt="Our Facebook!"</a></img>
+<a href=https://www.facebook.com/groups/1054356761315914/"><img id="pandering2" src="facebook.png" alt="Our Facebook!"</a></img>
 
 </body>
 </html>
