--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ participants to respect the activity's core values, work hard and compete honest
 
 </a>
 
-<img id="pandering" src="instagram-new-flat.png" alt="Our Instagram!"
-<a href=https://www.facebook.com/groups/1054356761315914/"><img id="pandering2" src="facebook.png" alt="Our Facebook!"</a></img>
+<a href="https://www.instagram.com/whsspeechanddebate/"><img id="pandering" src="instagram-new-flat.png" alt="Our Instagram!"></a>
+<a href="https://www.facebook.com/groups/1054356761315914/"><img id="pandering2" src="facebook.png" alt="Our Facebook!"></a>
 
 </body>
 </html>
