--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <ul class="sidenav">
 
-            <li> <a href=https://www.rjuhsd.us/Page/2617">
+            <li> <a href="https://www.rjuhsd.us/Page/2613">
  <img class="crest" src="https://www.rjuhsd.us/cms/lib/CA01001478/Centricity/Template/GlobalAssets/images///logos/WHS%20crest%20Logo%20transparent.png"
 alt="Woodcreek Crest" width="50px"> </a> <a class="active" href="index.html" width="1000">Home</a></li>
 
